--- a/public/css/index.html
+++ b/public/css/index.html
@@ -19,12 +19,12 @@
 		<div class="container-login100">
 			<div class="wrap-login100">
 				<div class="login100-pic js-tilt" data-tilt>
-					<img src="images/img-01.png" alt="IMG">
+					<img src="images/PushNotification1.png" alt="IMG">
 				</div>
 
 				<form class="login100-form validate-form">
 					<span class="login100-form-title">
-						Whatsapp Omnichat
+						Push Notification LEOAPP
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate="O template é obrigatório">
