--- a/public/css/index.html
+++ b/public/css/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-	<title>Whatsapp Omnichat</title>
+	<title>Push Notification</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
