--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,14 @@
 						Push Notification LEOAPP
 					</span>
 
+					<div class="wrap-input100 validate-input" data-validate="Título">
+						<input class="input100" type="text" id="templateCode" placeholder="Título*">
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-whatsapp" aria-hidden="true"></i>
+						</span>
+					</div>
+
 					<div class="wrap-input100 validate-input" data-validate="O template é obrigatório">
 						<input class="input100" type="text" id="templateCode" placeholder="código do template*">
 						<span class="focus-input100"></span>
