--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate="Título">
-						<input class="input100" type="text" id="templateCode" placeholder="Título*">
+						<input class="input100" type="text" id="tituloPush" placeholder="Título*">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-whatsapp" aria-hidden="true"></i>
