--- a/public/index.html
+++ b/public/index.html
@@ -36,15 +36,15 @@
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="O template é obrigatório">
-						<input class="input100" type="text" id="templateCode" placeholder="código do template*">
+						<input class="input100" type="text" id="message" placeholder="mensagem*">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-whatsapp" aria-hidden="true"></i>
 						</span>
 					</div>
 
-					<div class="wrap-input100 validate-input" data-validate="O campo do telefone é obrigatório">
-						<input class="input100" type="text" id="phoneFieldName" placeholder="campo de telefone*">
+					<div class="wrap-input100 validate-input" data-validate="O campo de matrícula é obrigatório">
+						<input class="input100" type="text" id="matricula" placeholder="matrícula*">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-phone" aria-hidden="true"></i>
