--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,8 @@
 						Push Notification LEOAPP - Heroku
 					</span>
 
-					<div class="wrap-input100 validate-input" data-validate="Título">
-						<input class="input100" type="text" id="tituloPush" placeholder="Título*">
+					<div class="wrap-input100 validate-input" data-validate="título">
+						<input class="input100" type="text" id="tituloPush" placeholder="título*">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-whatsapp" aria-hidden="true"></i>
@@ -36,15 +36,7 @@
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="parâmetros do título">
-						<input class="input100" type="text" id="parametrosTituloPush" placeholder="parâmetros do Título*">
-						<span class="focus-input100"></span>
-						<span class="symbol-input100">
-							<i class="fa fa-whatsapp" aria-hidden="true"></i>
-						</span>
-					</div>
-
-					<div class="wrap-input100 validate-input" data-validate="O template é obrigatório">
-						<input class="input100" type="text" id="message" placeholder="mensagem*">
+						<input class="input100" type="text" id="parametrosTituloPush" placeholder="parâmetros do título*">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-whatsapp" aria-hidden="true"></i>
@@ -56,6 +48,14 @@
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-phone" aria-hidden="true"></i>
+						</span>
+					</div>
+
+					<div class="wrap-input100 validate-input" data-validate="O template é obrigatório">
+						<input class="input100" type="text" id="message" placeholder="mensagem*">
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-whatsapp" aria-hidden="true"></i>
 						</span>
 					</div>
 
