--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,8 @@
 						</span>
 					</div>
 
-					<div class="wrap-input100 validate-input" data-validate="parâmetros do título">
-						<input class="input100" type="text" id="parametrosTituloPush" placeholder="parâmetros do título*">
+					<div class="wrap-input100">
+						<input class="input100" type="text" id="parametrosTituloPush" placeholder="parâmetros do título">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-whatsapp" aria-hidden="true"></i>
