--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-	<title>Push Notification - Heroku</title>
+	<title>Push Notification</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,7 +24,7 @@
 
 				<form class="login100-form validate-form">
 					<span class="login100-form-title">
-						Push Notification LEOAPP - Heroku
+						Push Notification LEOAPP
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate="título">
